Node_Package/Node_lg_groundtruth_data_ws/lg_groundtruth_data_ws/log/build_2021-01-08_15-53-36/lg_sub_groundtruth/stderr.log
  File "/home/acclivis_linux2/script/lg_groundtruth_data_ws/install/lg_sub_groundtruth/lib/python3.6/site-packages/lg_sub_groundtruth/lg_gt3d_subscriber.py", line 32
    self.subscription_2 = self.create_subscription(BoundingBoxArray,'/lidars/lidar_bounding_boxes'1)
                                                                                                  ^
SyntaxError: invalid syntax

